--- a/client/pizzacity/package.json
+++ b/client/pizzacity/package.json
@@ -10,6 +10,7 @@
     "mdb-react-ui-kit": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
