--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "server",
+  "name": "thepizzacity",
   "version": "1.0.0",
-  "description": "",
+  "description": "this is backend part of pizzacity",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -9,7 +9,7 @@
     "dev": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "nitin_kadam",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
