Admin part frontend Auth page done
Admin part frontend Auth page done and also changing images and icons and creating admin page

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thepizzacity",
+  "name": "pizzacity",
   "version": "1.0.0",
   "description": "this is backend part of pizzacity",
   "main": "index.js",
